<resources>
    <string name="app_name">Schedule</string>
    <string name="txUserName">用户名</string>
    <string name="txPassword">密码</string>
    <string name="editPassword">输入密码</string>
    <string name="txConfirm">确认密码</string>
    <string name="submit">注册</string>
    <string name="register">注册</string>
    <string name="newuser">新用户注册</string>
    <string name="log">登录</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="showSideBar">显示侧滑栏</string>
    <string name="tempName">Kuhn</string>
    <string name="project1_title">软件工程课程设计</string>
    <string name="project2_title">数据库课程设计</string>
    <string name="project3_title">操作系统课程设计</string>
    <string name="project1_desc">已完成</string>
    <string name="project2_desc">已完成</string>
    <string name="project3_desc">已完成</string>
    <string name="projectTitle">项目名称</string>
    <string name="projectDesc">项目描述</string>
    <string name="passwordNull">密码不能为空</string>
    <string name="length">密码必须少于16位</string>
    <string name="digitalorletter">密码只能是字母或数字</string>
    <string name="notthesame">密码不一致</string>
    <string name="uniqueusername">用户名已被注册</string>
    <string name="usernameNull">用户名不能为空</string>
    <string name="share">SHARE</string>
    <string name="readmore">READMORE</string>
    <string name="set">设置</string>
    <string name="projectsInprocess">正在进行的项目</string>
    <string name="more">更多</string>
    <string name="about">关于</string>
    <string name="history">历史项目</string>
    <string name="info">账号信息</string>
    <string name="logout">退出登录</string>
    <string name="notifications">通知</string>
    <string name="teammates">队友信息</string>
    <string name="personaltags">技术标签</string>
    <string name="projectName">项目名称</string>
    <string name="projectmember">项目成员</string>
    <string name="owner">你</string>
    <string name="addmember">添加成员</string>
    <string name="ddl">项目截止日期</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="create">新建</string>
    <string name="startYear">2017</string>
    <string name="endYear">2050</string>
    <string name="modifyPhotoText">头像</string>
    <string name="modifyNameText">更改名字</string>
    <string name="modifyPwdText">更改密码</string>
    <string name="txCurrentPassword">当前密码</string>
    <string name="txNewPassword">新密码</string>
    <string name="submitModify">提交修改</string>
</resources>
