<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@drawable/bg">

    <criminalintent.com.example.lenovo.schedule.customizeWidget.CircularImage
        android:id="@+id/cover_user_photo"
        android:layout_width="@dimen/headwidth"
        android:layout_height="@dimen/headheight"
        android:layout_marginBottom="@dimen/welcome_height_margin"
        android:layout_marginTop="@dimen/registerheightmargin"
        android:layout_centerHorizontal="true"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registerUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        android:layout_marginLeft="@dimen/logusrpwdmargin"
        android:layout_marginRight="@dimen/logusrpwdmargin"
        android:layout_below="@id/cover_user_photo"
        app:errorEnabled="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txUserName"
        android:inputType="textPersonName"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        android:layout_marginLeft="@dimen/logusrpwdmargin"
        android:layout_marginRight="@dimen/logusrpwdmargin"
        android:layout_below="@id/registerUserName"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txPassword"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registerPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        android:layout_marginLeft="@dimen/logusrpwdmargin"
        android:layout_marginRight="@dimen/logusrpwdmargin"
        android:layout_below="@id/registerPassword"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txConfirm"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:textColor="@color/goRegister"
        android:layout_below="@id/registerPasswordConfirm"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Borderless"/>



</RelativeLayout>
