<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg"

    tools:context="criminalintent.com.example.lenovo.schedule.MainActivity">

    <criminalintent.com.example.lenovo.schedule.customizeWidget.CircularImage
        android:id="@+id/logHeadImage"
        android:layout_width="@dimen/headwidth"
        android:layout_height="@dimen/headheight"
        android:layout_marginBottom="@dimen/welcome_height_margin"
        android:layout_marginRight="@dimen/welcome_width_margin"
        android:layout_marginLeft="@dimen/logheadwidthmargin"
        android:layout_marginTop="@dimen/headtop"/>



    <!--<criminalintent.com.example.lenovo.schedule.customizeWidget.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logPassword"
        android:hint="@string/editPassword"
        android:textSize="@dimen/textSize"
        android:inputType="numberPassword"
        android:drawableRight="@drawable/eyeclose"
        />-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/logUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        android:layout_marginLeft="@dimen/logusrpwdmargin"
        android:layout_marginRight="@dimen/logusrpwdmargin"

        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txUserName"
            android:inputType="textAutoComplete"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/logPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        android:layout_marginLeft="@dimen/logusrpwdmargin"
        android:layout_marginRight="@dimen/logusrpwdmargin"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txPassword"
            android:inputType="textPassword"

            />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/logAndRegister"
        android:layout_marginLeft="@dimen/logandregistermargin"
        android:layout_marginRight="@dimen/commonmargin"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newuser"
            android:id="@+id/goRegister"
            android:textColor="@color/goRegister"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:id="@+id/log"
            android:textColor="@color/goRegister"
            android:layout_marginLeft="@dimen/logsubmargin"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        </LinearLayout>




    <!--<LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:text="@string/register"
            android:textSize="25dp"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/floatactionbutton"
            android:layout_below="@id/register"

            />
        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addfloatingactionbutton"
            android:layout_below="@id/floatactionbutton"
            />

    </LinearLayout>
-->



</LinearLayout>
